--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mellifluous</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Lato" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
