tweaked background image coloring

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <td class="stat"><a href="https://discord.gg/qtqkutz" target="_blank" id="buttonStyleA">Join Now!</a></td>
   </table>
   <div id="flexboxContainer">
-    <div class="twoColumnC" id="rules">
+    <flex-item class="twoColumnC" id="rules">
       <h4> Rules </h4>
       <p id="discordDesc">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
       </p>
-    </div>
-    <div id="staffListing">
+    </flex-item>
+    <flex-item id="staffListing">
       <h4> Staff </h4>
       <table id="staff">
         <tr>
@@ -59,7 +59,7 @@
           <td id="284447796323418113">Offline</td>
         </tr>
       </table>
-	</div>
+	</flex-item>
   </div>
   <div id="footer">
     <a href="/changelog.html" target="_blank" id="buttonStyleA">Changelog</a>
