--- a/changelog.html
+++ b/changelog.html
@@ -3,6 +3,14 @@
 <link rel="stylesheet" href="css/style.css">
 
 <p style="color: black">
+2/6/2018 20:50 EST <br />
++ add support for mobile <br />
++ updated rules section <br />
++ minor visual changes <br />
++ added bot info
+</p>
+
+<p style="color: black">
 2/25/2018 20:50 EST <br />
 + added changelog <br />
 + added feedback <br />
