added custom elements and minor visual changes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Mellifluous</title> 
+  <meta charset="UTF-8" content="width=device-width">
+  <title>Mellifluous</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Lato" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -23,10 +25,10 @@
   <table id="stats"><tr>
     <td class="stat"><h3 id="usersOnline">Error</h3><br /><p>Online users</p></td>
     <td class="stat"><a href="https://discord.gg/qtqkutz" target="_blank" id="buttonStyleA">Join Now!</a></td>
+	</tr>
   </table>
   <div id="mainContent">
-    <div class="spacer"></div>
-    <div>
+    <f-item>
       <h4> Rules </h4>
       <ul id="rules">
         <li>Be kind</li>
@@ -36,9 +38,8 @@
         <li>No Spamming</li>
 
       </ul>
-    </div>
-    <div class="divider-row"></div>
-    <div id="staffListing">
+    </f-item>
+    <f-item id="staffListing">
       <h4> Staff </h4>
       <table id="staff" class="darkTable">
         <tr>
@@ -46,7 +47,7 @@
           <th>Status</th>
         </tr>
         <tr>
-          <td>april 2020 @ europe</td>
+          <td>wooosh</td>
           <td id="277582380406145024">Offline</td>
         </tr>
         <tr>
@@ -62,10 +63,8 @@
           <td id="284447796323418113">Offline</td>
         </tr>
       </table>
-    </div>
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-    <div>
+    </f-item>
+    <f-item>
       <h4>Bot Commands</h4>
       <table id="botInfo" class="darkTable">
         <tr>
@@ -93,10 +92,8 @@
           <td><a href="https://www.tatsumaki.xyz/commands.html" target="_blank">Here</a></td>
         </tr>
       </table>
-    </div>
-    <div class="divider-row"></div>
-    <div> </div>
-    <div class="spacer"></div>
+    </f-item>
+    <f-item> </f-item>
   </div>
   <div id="footer">
     <a href="/changelog.html" target="_blank" id="buttonStyleA">Changelog</a>
